# typing_copilot

./: LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
mypy_copilot/: __init__.py  cli.py  config_generation.py  error_tracker.py  mypy_runner.py  verbosity.py
typing_copilot/: __init__.py  cli.py  config_generation.py  error_tracker.py  mypy_runner.py  own_config.py  validation.py
typing_copilot/tests/: test_config_generation.py  test_own_config.py
