[tool.poetry]
name = "mypy-copilot"
version = "0.1.0"
description = "Helper for starting to type-hint large codebases with mypy."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.5"
mypy = "^0.782"
black = "==19.10b0"
flake8 = "^3.6.0"
click = "^7.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
