[tool.poetry]
name = "typing_copilot"
version = "0.6.0"
description = "Helper for starting to type-hint large codebases with mypy."
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
types-toml = "^0.1.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"
mypy = "^0.910"
black = "==21.7b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
