[tool.poetry]
name = "typing_copilot"
version = "0.6.0"
description = "Helper for starting to type-hint large codebases with mypy."
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8"
toml = "^0.10.2"
types-toml = "^0.10.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"
mypy = "^0.931"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^7.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
